<resources>
    <string name="app_name">Accentor</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sign_out">Sign out</string>

    <string name="prompt_server">Server</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_server">Server is not a valid URL</string>
    <string name="login_failed">"Login failed"</string>
    <string name="notification_channel_description">Shows what music is currently playing in Accentor</string>

    <string name="home">Home</string>
    <string name="open_menu">Open menu</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_app_drawer">Close drawer</string>
    <string name="navigation_icon">Navigation icon</string>
    <string name="artist_image">Image showing artist</string>
    <string name="album_image">Image showing album</string>
    <string name="close_player">Close player</string>
    <string name="various_artists">Various Artists</string>
    <string name="now_playing">Now playing</string>
    <string name="play_next">Play next</string>
    <string name="play_last">Play last</string>
    <string name="play_now">Play now</string>
    <string name="album_cover_of_current_track">Album cover of current track</string>
    <string name="toggle_queue">Toggle queue</string>
    <string name="clear_queue">Clear queue</string>
    <string name="repeat_off">Repeat off</string>
    <string name="repeat_all">Repeat all</string>
    <string name="repeat_one">Repeat one</string>
    <string name="previous">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="shuffle_all">Shuffle on</string>
    <string name="shuffle_none">Shuffle off</string>
    <string name="preferences">Preferences</string>
    <string name="close_preferences">Close preferences</string>
    <string name="playback_settings">Playback settings</string>
    <string name="about">About</string>
    <string name="logged_in_as">Logged in as %s</string>
    <string name="last_sync_finished">Last sync finished</string>
    <string name="not_finished_yet">Not finished yet</string>
    <string name="version_info">Accentor version %s</string>
    <string name="music_cache_size">Music cache size</string>
    <string name="image_cache_size">Image cache size</string>
    <string name="codec_conversion">Codec conversion</string>
    <string name="not_set">Not set</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change_music_cache_size">Change music cache size</string>
    <string name="music_cache_explanation">Needs to be at least 1024 MiB. Note that Accentor needs to be restarted after this is changed.</string>
    <string name="change_image_cache_size">Change image cache size</string>
    <string name="image_cache_explanation">Needs to be at least 100 MiB. Note that Accentor needs to be restarted after this is changed.</string>
    <string name="recently_released">Recently released albums</string>
    <string name="on_this_day">On this day</string>
    <string name="recently_added_albums">Recently added albums</string>
    <string name="recently_played_albums">Recently played albums</string>
    <string name="recently_added_artists">Recently added artists</string>
    <string name="recently_played_artists">Recently played artists</string>
    <string name="random_albums">Random albums</string>
    <string name="random_artists">Random artists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="tracks">Tracks</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to">Go to %s</string>
    <string name="search">Search</string>
    <string name="stop_searching">Stop searching</string>
    <string name="no_albums">No albums could be found</string>
    <string name="no_on_this_day">No albums were released on this day</string>
    <string name="no_artists">No artists could be found</string>

    <plurals name="album_length_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="album_tracks_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <plurals name="playlist_albums">
      <item quantity="one">%d album</item>
      <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="playlist_artists">
      <item quantity="one">%d artist</item>
      <item quantity="other">%d artists</item>
    </plurals>
    <plurals name="playlist_tracks">
      <item quantity="one">%d track</item>
      <item quantity="other">%d tracks</item>
    </plurals>

    <string name="error_report_dialog_title">Report error</string>
    <string name="error_report_dialog_text">An error occurred. Do you want to report it?</string>
</resources>
