<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:elevation="4dp"
    android:orientation="horizontal">

    <me.vanpetegem.accentor.components.SquaredImageView
        android:id="@+id/album_cover_image_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        custom:direction="horizontal" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/track_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="false" />


        <TextView
            android:id="@+id/track_artists"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textIsSelectable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <me.vanpetegem.accentor.components.SquaredImageView
            android:background="@null"
            android:id="@+id/bottom_bar_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/previous"
            android:scaleType="fitXY"
            android:src="@drawable/exo_controls_previous"
            custom:direction="horizontal" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:background="@null"
            android:id="@+id/bottom_bar_pause"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/pause"
            android:scaleType="fitXY"
            android:src="@drawable/exo_controls_pause"
            custom:direction="horizontal" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:background="@null"
            android:id="@+id/bottom_bar_play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:scaleType="fitXY"
            android:src="@drawable/exo_controls_play"
            custom:direction="horizontal" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:background="@null"
            android:id="@+id/bottom_bar_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/next"
            android:src="@drawable/exo_controls_next"
            custom:direction="horizontal" />
    </LinearLayout>

</LinearLayout>
