<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ViewFlipper
        android:id="@+id/playerViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/albumCoverImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/album_cover_of_current_track"
                android:scaleType="fitStart" />

            <TextView
                android:id="@+id/trackTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/trackArtistsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/albumTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp"
                android:textIsSelectable="false" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/queueRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <me.vanpetegem.accentor.components.SquaredImageView
            android:id="@+id/playControlsRepeat"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@null"
            android:contentDescription="@string/repeat_off"
            android:src="@drawable/ic_repeat_off"
            custom:direction="horizontal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:id="@+id/playControlsPrevious"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous"
            custom:direction="horizontal" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:id="@+id/playControlsPause"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause"
            custom:direction="horizontal" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:id="@+id/playControlsPlay"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play"
            custom:direction="horizontal" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:id="@+id/playControlsNext"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next"
            custom:direction="horizontal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <me.vanpetegem.accentor.components.SquaredImageView
            android:id="@+id/playControlsShuffle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/shuffle"
            android:src="@drawable/ic_shuffle_none"
            custom:direction="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textIsSelectable="false" />

        <SeekBar
            android:id="@+id/playerSeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/playerTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textIsSelectable="false" />

    </LinearLayout>


</LinearLayout>
